--- a/public/exercise.html
+++ b/public/exercise.html
@@ -68,10 +68,10 @@
             </div>
           </div>
           <div class="buttons">
-            <button disabled class="huge ui blue button complete">
+            <button class="huge ui blue button complete">
               Complete
             </button>
-            <button disabled class="huge ui positive button add-another">
+            <button class="huge ui positive button add-another">
               Add Exercise
             </button>
           </div>
